--- a/Liburutegia/.project
+++ b/Liburutegia/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>liburutegia</name>
+	<name>Liburutegia</name>
 	<comment></comment>
 	<projects>
 	</projects>
